# insights

./: README.md
backend-insights/: .env.example  Cargo.toml
backend-insights/src/: clients.rs  db.rs  errors.rs  main.rs
backend-insights/src/handlers/: auth_handler.rs  mod.rs  user_handler.rs
backend-insights/src/middleware/: auth_middleware.rs  log_middleware.rs  mod.rs
backend-insights/src/models/: auth.rs  mod.rs  user.rs  user_response.rs
backend-insights/src/utils/: hash.rs  jwt.rs  otp.rs
front-insights/: package-lock.json  package.json  svelte.config.js
front-insights/src/lib/components/: Login.svelte  Profile.svelte  Register.svelte  UserMenu.svelte
front-insights/src/lib/services/: auth.js
front-insights/src/lib/stores/: auth.js  authStore.js
front-insights/src/lib/utils/: api.js
front-insights/src/routes/: +layout.svelte  +page.svelte
front-insights/src/routes/(protected)/: +layout.svelte
front-insights/src/routes/(protected)/alerts/: +page.svelte
front-insights/src/routes/(protected)/dashboard/: +page.svelte
front-insights/src/routes/(protected)/insights/: +page.svelte
front-insights/src/routes/(protected)/profile/: +page.svelte
front-insights/src/routes/(protected)/sources/: +page.svelte
front-insights/src/routes/login/: +page.svelte
front-insights/src/routes/register/: +page.svelte
insights/src/lib/components/: NavMenu.svelte  Sidebar.svelte  UserSection.svelte
