[package]
name = "backend-insights"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"
mongodb = { version = "2.4.1", features = ["tokio-runtime"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.85"
jsonwebtoken = "8.2.0"
bcrypt = "0.12.0"
futures = "0.3.21"
dotenv = "0.15.0"
chrono = "0.4.38"
bson = "2.13.0"
actix-cors = "0.7.0"
actix-service = "2.0.2"
rand = "0.8.5"
lettre = "0.11.10"
